[swagger] Add: updatePassword
